@@ -124,6 +124,7 @@ Version 1.9.0-svn:
    * Added scroll_to_leader attribute to side tag.
      Default value is 'yes' (bug #15921)
    * Draw the map border over _off^_usr tiles too.
+   * Add 'immutable' key to [label], defaulting to true (feature #16078)
  * Miscellaneous and bug fixes:
    * Added help entry when new unit is created directly in the recall list
    * Defaulted log level to warning again
